--- a/login.html
+++ b/login.html
@@ -22,7 +22,7 @@
                 <button type="submit" class="btn btn-primary center-block col-lg-12" >Log In</button>
             </div>
 
-        </div>x
+        </div>
 
     </form>
 
