--- a/login.html
+++ b/login.html
@@ -19,7 +19,11 @@
             </div>
 
             <div class="modal-footer">
-                <button type="submit" class="btn btn-primary center-block col-lg-12" >Log In</button>
+                <button type="submit" class="btn btn-primary center-block btn-lg btn-block" >Log In</button>
+                </br>
+
+                <p class="text-danger text-center">{{warning}}</p>
+
             </div>
 
         </div>
