--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul class="nav navbar-nav">
             <li><a ui-sref="home" >Home</a> </li>
 
-            <li><a ui-sref="home.logIn" >Log In</a> </li>
+            <li><a ui-sref="home.logIn" >{{log}}</a> </li>
         </ul>
 
 
