Pracenje sesije odradjeno, dorada :D

--- a/login_success.html
+++ b/login_success.html
@@ -3,7 +3,7 @@
         <h1>Welcome {{nickname}}</h1>
 
         <div class="modal-footer">
-        <button type="button" class="btn btn-success" ng-click="exit()">Success</button>
+        <button type="button" class="btn btn-success" ng-click="exit()">Ok</button>
 
     </div>
     </div>
