implementirao <found_something> polja (ime, kategorija - pogledaj app.js ima par caka ali radi, opis) *Google map api addone treba uraditi ( search box i marker)

--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+<!--http://angular-ui.github.io/angular-google-maps/#!/-->
+    
     <script src="LostAndFound_build/angular.js"></script>
     <script src="LostAndFound_build/angular-ui-router.js"></script>
     <script src="LostAndFound_build/ui-bootstrap-tpls-1.3.2.js"></script>
+    <script src='http://maps.googleapis.com/maps/api/js?key=AIzaSyA_yQKdtT8a3GNBz_RNsKGsHRt141knb_Q&libraries=places'></script>
+    <script src="LostAndFound_build/lodash.js"></script>
+    <script src="LostAndFound_build/angular-google-maps.min.js"></script>
+    <script src="LostAndFound_build/angular-simple-logger.js"></script>
+
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
     <script src="app.js"></script>
 
+
     <link rel="stylesheet" href="LostAndFound_build/css/bootstrap.min.css">
+    <link rel="stylesheet" href="LostAndFound_build/css/styleCss.css">
 
 
     <style>
