--- a/partial-home-found.html
+++ b/partial-home-found.html
@@ -9,7 +9,7 @@
 <hr>
 <div >
     <div >
-        <button class="btn btn-danger btn input-block-level form-control" ng-click=" isCollapsed_F2 = !isCollapsed_F2">FOUND SOMETHING</button>
+        <button class="btn btn-danger btn input-block-level form-control" ng-click=" isCollapsed_F2 = !isCollapsed_F2;prikaziMapu(); " >FOUND SOMETHING</button>
         <div uib-collapse="!isCollapsed_F2">
             <div class="well well-lg"> <div ui-view="foundSomething_view"></div> </div>
         </div>
