--- a/partial-home-found-foundSomething.html
+++ b/partial-home-found-foundSomething.html
@@ -40,11 +40,13 @@
             </div>
 
             <div >
+                <script type="text/ng-template" id="searchbox.tpl.html"> <input id="search" type="text" placeholder="Search Box"></script>
             <ui-gmap-google-map ng-if="showMap" center='map.center' zoom='map.zoom' draggable="true" options="options">
                 <ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id">
                 </ui-gmap-marker>
-
+                <ui-gmap-search-box template="searchbox.template" events="searchbox.events"></ui-gmap-search-box>
             </ui-gmap-google-map>
+
             </div>
         </div>
 
