--- a/partial-home.html
+++ b/partial-home.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 
 <div class="jumbotron text-center">
-    <h1>LOST & FOUND</h1>
-    <p>Dedicated to retrieving <span class="text-danger">EVERYTHING</span> you have ever lost</p>
+    <h1><span class="orange">LOST</span> & <span class="turquoise">FOUND</span></h1>
+    <p>Dedicated to retrieving <span class="yellow text-bold">EVERYTHING</span> you have ever lost </p>
 
-    <a ui-sref=".lost" class="btn btn-primary" >LOST</a>
-    <a ui-sref=".found" class="btn btn-danger">FOUND</a>
+    <a ui-sref=".lost" class="btn btn-orange-light btn-small-width"><span class="white">LOST</span></a>
+
+    <a ui-sref=".found" class="btn btn-turquoise-light btn-small-width"><span class="white">FOUND</span></a>
+
+
 
 </div>
+
 
 <div ui-view></div>
