--- a/partial-home-lost-lostSomething.html
+++ b/partial-home-lost-lostSomething.html
@@ -1,2 +1,58 @@
-<!DOCTYPE html>
-    <h3>Lost Something?</h3>
+<div>
+    <div>
+        <h3><strong>You can report your findings in a form below</strong></h3>
+    </div>
+    </br>
+    <form ng-submit="found_something()" onkeypress="return event.keyCode != 13;">
+        <div>
+
+            <div class="form-group">
+                <label>Item Name</label>
+                <input type="text" class="other-text-form" placeholder="Enter item name" ng-model="itemName" required/>
+            </div>
+
+
+            <div class="form-group">
+                <label>Category</label>
+                </br>
+                <ul>
+                    <li ng-repeat="(typeKey, typeVal) in inputs">
+                        <span>Select one or more: </span>
+                        <ul>
+                            <li ng-repeat="value in typeVal">
+                                <label>{{value}}
+                                    <input
+                                            type="checkbox"
+                                            ng-model="checkValue"
+                                            ng-change="setOutput(typeKey, $index, value)"
+                                    >
+                                </label>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
+
+            <div class="form-group">
+                <label for="comment">Description</label>
+                <textarea class="form-control" rows="5" id="comment"></textarea>
+            </div>
+
+            <div >
+                <label>Mark the location of the finding</label>
+
+                <script type="text/ng-template" id="searchbox.tpl.html"> <input id="search" type="text" placeholder="Search Box"></script>
+                <ui-gmap-google-map ng-if="showMap_lost" center='map.center' zoom='map.zoom' draggable="true" options="options">
+                    <ui-gmap-marker coords="marker.coords" options="marker.options" events="marker.events" idkey="marker.id">
+                    </ui-gmap-marker>
+                    <ui-gmap-search-box template="searchbox.template" events="searchbox.events"></ui-gmap-search-box>
+                </ui-gmap-google-map>
+
+            </div>
+        </div>
+        </br>
+        <button type="submit" class="btn btn-yellow center-block" ><span class="white text-bold">Submit</span></button>
+
+    </form>
+</div>
