--- a/partial-home-lost.html
+++ b/partial-home-lost.html
@@ -1,6 +1,6 @@
 <div >
     <div >
-        <button class="btn btn-primary btn input-block-level form-control" ng-click=" isCollapsed_L1 = !isCollapsed_L1">LOST THINGS</button>
+        <button class="btn btn-orange-light input-block-level form-control" ng-click=" isCollapsed_L1 = !isCollapsed_L1"><span class="white text-bold">LOST THINGS</span></button>
         <div uib-collapse="!isCollapsed_L1">
             <div class="well well-lg"> <div ui-view="lostThings_view"></div> </div>
          </div>
@@ -11,7 +11,7 @@
 
 <div >
     <div >
-        <button class="btn btn-primary btn input-block-level form-control" ng-click=" isCollapsed_L2 = !isCollapsed_L2">LOST SOMETHING</button>
+        <button class="btn btn-orange-light input-block-level form-control" ng-click=" isCollapsed_L2 = !isCollapsed_L2;prikaziMapu_lost();"><span class="white text-bold">LOST SOMETHING</span></button>
         <div uib-collapse="!isCollapsed_L2">
             <div class="well well-lg"> <div ui-view="lostSomething_view"></div> </div>
         </div>
