-napravio preload funkcije za loadovanje mape u lostSomething i foundSomething i cuvanje isCollapsed tako da se sada ne refreshuje kada se loginujes ili logoutujes i prelazis sa stejta na stejt -dodao logout modal

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <div class="navbar navbar-inverse" role="navigation">
         <div class="navbar-header">
-            <a class="navbar-brand" ui-sref="home" >Lost and Found</a>
+            <a class="navbar-brand" ui-sref="#" >Lost and Found</a>
         </div>
 
         <ul class="nav navbar-nav">
