--- a/partial-home.html
+++ b/partial-home.html
@@ -2,7 +2,7 @@
 
 <div class="jumbotron text-center">
     <h1><span class="orange">LOST</span> & <span class="turquoise">FOUND</span></h1>
-    <p>Dedicated to retrieving <span class="yellow text-bold">EVERYTHING</span> you have ever lost </p>
+    <p>Dedicated to retrieving <span class="yellow">EVERYTHING</span> you have ever lost </p>
 
     <a ui-sref=".lost" class="btn btn-orange-light btn-small-width"><span class="white">LOST</span></a>
 
