--- a/index.html
+++ b/index.html
@@ -27,20 +27,9 @@
 </head>
 <body ng-app="LFapp" >
 
-    <div class="navbar navbar-inverse " role="navigation">
-        <div class="navbar-header">
-            <a class="navbar-brand" ui-sref="home" >Lost and Found</a>
-        </div>
-
-        <ul class="nav navbar-nav masthead-nav">
-
-            <li><a ui-sref="home.logIn" class="text-bold" >{{log}}</a> </li>
-        </ul>
 
 
-    </div>
-
-    <div class="container">
+    <div class="container header">
 
         <div ui-view></div>
 
