--- a/partial-home.html
+++ b/partial-home.html
@@ -28,8 +28,8 @@
                 </div>
             </div>
         <div class="lnf_box header">
-            <div class="txt_heading left-padding">
-        <h1><span class="orange txt_lg">LOST</span> <span class="txt_lg txt_heading ">&</span> <span class="turquoise txt_lg">FOUND</span></h1>
+            <div class="txt_heading">
+        <h1 class="left-padding"><span class="orange txt_lg">LOST</span> <span class="txt_lg txt_heading">&</span> <span class="turquoise txt_lg">FOUND</span></h1>
             </div>
         <p class="txt_heading p_heading">Dedicated to retrieving <span class="yellow everything p_heading">EVERYTHING</span> you have ever lost </p>
 
@@ -53,6 +53,6 @@
     </div>
 </div>
 
-
+</div>
 
 
