chat kidamo ! brda sranja nas ceka votcheee

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <script src="LostAndFound_build/angular-google-maps.min.js"></script>
     <script src="LostAndFound_build/angular-simple-logger.js"></script>
 
+    <script src="angularjs-chat/angular-chat.js"></script>
+
+
+    <link rel="stylesheet" href="angular-bootstrap-simple-chat/src/css/style.css">
+
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
     <script src="app.js"></script>
@@ -20,6 +25,7 @@
 
     <link rel="stylesheet" href="LostAndFound_build/css/bootstrap.min.css">
     <link rel="stylesheet" href="LostAndFound_build/css/styleCss.css">
+
 
 
 
