--- a/partial-home.html
+++ b/partial-home.html
@@ -2,7 +2,7 @@
 <div class="navbar navbar-inverse header " role="navigation">
     <div class="navbar-header">
         <!--<a class="navbar-brand" ui-sref="home" >Lost and Found</a>-->
-        <div class="navbar-brand"><img src='http://localhost/untitled1/bckg/42-512.png'></div>
+        <a class="navbar-brand"><img src='http://localhost/untitled1/bckg/42-512.png'></a>
     </div>
 
     <ul class="nav navbar-nav masthead-nav">
@@ -12,6 +12,7 @@
 
 
 </div>
+
 <div class="site-wrapper">
     <div class="site-wrapper-inner">
         <div class="cover-container">
@@ -27,7 +28,8 @@
                     </ul>
                 </div>
             </div>
-        <div class="lnf_box header">
+
+            <div class="lnf_box header">
             <div class="txt_heading">
         <h1 class="left-padding"><span class="orange txt_lg">LOST</span> <span class="txt_lg txt_heading">&</span> <span class="turquoise txt_lg">FOUND</span></h1>
             </div>
