--- a/partial-home-lost-lostThings.html
+++ b/partial-home-lost-lostThings.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
     <h3>Lost Things</h3>
 
-    <div ng-controller="chat" style="width:auto; height:auto; border: 1px solid;">
-        <div ng-repeat="message in messages">
-            {{ message.user.name }}:
-            {{ message.data }}
-        </div>
-        <form ng-submit="send()" style="margin:5px;">
-            <input ng-model="textbox">
-            <button type="submit">Send</button>
-        </form>
-        <button ng-click="clear()" style="margin:5px;">Clear</button>
-    </div>
+    <!--<div ng-controller="chat" style="width:auto; height:auto; border: 1px solid;">-->
+        <!--<div ng-repeat="message in messages">-->
+            <!--{{ message.user.name }}:-->
+            <!--{{ message.data }}-->
+        <!--</div>-->
+        <!--<form ng-submit="send()" style="margin:5px;">-->
+            <!--<input ng-model="textbox">-->
+            <!--<button type="submit">Send</button>-->
+        <!--</form>-->
+        <!--<button ng-click="clear()" style="margin:5px;">Clear</button>-->
+    <!--</div>-->
 </div>
