--- a/partial-home.html
+++ b/partial-home.html
@@ -7,7 +7,8 @@
 
     <ul class="nav navbar-nav masthead-nav">
 
-        <li><a ui-sref="home.logIn" class="text-bold" >{{log}}</a> </li>
+       <li> <a ng-click="log_in_modal()" class="text-bold" >{{log}}</a></li>
+        <li><a ng-click="register_modal()" class="text-bold" >{{reg}}</a> </li>
     </ul>
 
 
