--- a/partial-home-found.html
+++ b/partial-home-found.html
@@ -1,17 +1,17 @@
 <div >
-    <div class="headerSlideRight">
-        <button class="btn btn-turquoise-light input-block-level form-control" ng-click="load_foundThings()"><span class="panel-title white text-bold" >FOUND THINGS</span></button>
+    <div  class="headerSlideRight" >
+        <button ng-click="gotoElement('foundThings');load_foundThings()" id="foundThings" class="btn btn-turquoise-light input-block-level form-control"><span class="panel-title white text-bold" >FOUND THINGS</span></button>
         <div uib-collapse="!isCollapsed_F1" class="collapseTransition" >
             <div class="well well-lg " ><div ui-view="foundThings_view"></div> </div>
         </div>
     </div>
 </div>
 
-<br>
+</br>
 
 <div >
-    <div class="headerSlideRightDelay">
-        <button class="btn btn-turquoise-light input-block-level form-control" ng-click="load_foundSomething();" ><span class="white text-bold">FOUND SOMETHING?</span></button>
+    <div class="headerSlideRightDelay"  id="foundSomething">
+        <button  ng-click="load_foundSomething();gotoElement('foundSomething')" class="btn btn-turquoise-light input-block-level form-control"  ><span class="white text-bold">FOUND SOMETHING?</span></button>
         <div uib-collapse="!isCollapsed_F2" class="collapseTransition">
             <div class="well well-lg"> <div ui-view="foundSomething_view"></div> </div>
         </div>
