--- a/partial-home-lost.html
+++ b/partial-home-lost.html
@@ -1,17 +1,17 @@
 <div >
-    <div class="headerSlideLeft">
-        <button class="btn btn-orange-light input-block-level form-control" ng-click="load_lostThings();"><span class="white text-bold">LOST THINGS</span></button>
+    <div class="headerSlideLeft" >
+        <button  ng-click="gotoElement('lostThings');load_lostThings();" id="lostThings"  class="btn btn-orange-light input-block-level form-control"><span class="white text-bold">LOST THINGS</span></button>
         <div uib-collapse="!isCollapsed_L1" class="collapseTransition">
             <div class="well well-lg"> <div ui-view="lostThings_view"></div> </div>
          </div>
     </div>
 </div>
 
-<br>
+</br>
 
 <div >
     <div class="headerSlideLeftDelay">
-        <button class="btn btn-orange-light input-block-level form-control" ng-click="load_lostSomething();"><span class="white text-bold">LOST SOMETHING?</span></button>
+        <button  ng-click="gotoElement('lostSomething');load_lostSomething();" id="lostSomething" class="btn btn-orange-light input-block-level form-control" ><span class="white text-bold">LOST SOMETHING?</span></button>
         <div uib-collapse="!isCollapsed_L2" class="collapseTransition">
             <div class="well well-lg"> <div ui-view="lostSomething_view"></div> </div>
         </div>
