--- a/partial-home-lost-lostThings.html
+++ b/partial-home-lost-lostThings.html
@@ -2,7 +2,10 @@
     <h3>Lost Things</h3>
 <div >
     <ui-gmap-google-map ng-if="showMap_lost_things" center='map.center' zoom='map.zoom' draggable="true" options="options">
-        <ui-gmap-markers models="markers" coords="'self'" icon="'icon'">
+        <ui-gmap-markers click="onClick" models="markers" coords="'self'" icon="'icon'">
+            <ui-gmap-windows show="show">
+                <div ng-non-bindable>{{title}}</div>
+            </ui-gmap-windows>
         </ui-gmap-markers>
 
     </ui-gmap-google-map>
