--- a/partial-home-lost-lostThings.html
+++ b/partial-home-lost-lostThings.html
@@ -1,5 +1,20 @@
 <!DOCTYPE html>
-    <h3>Lost Things</h3>
+<h3>Lost Things</h3>
+<input type="text" placeholder="Search" id="search"/>
+<label class="form_padding_ls" ng-repeat="(typeKey, typeVal) in inputs">
+    <ul>
+        <li ng-repeat="value in typeVal">
+            <label >{{value}}
+                <input
+                        type="radio"
+                        name="filter"
+                        ng-click="filter_map($index)"
+
+                />
+            </label>
+        </li>
+    </ul>
+</label>
 <div >
     <ui-gmap-google-map ng-if="showMap_lost_things" center='map.center' zoom='map.zoom' draggable="true" options="options">
         <ui-gmap-markers click="onClick" models="markers" coords="'self'" icon="'icon'">
