--- a/partial-home-lost-lostThings.html
+++ b/partial-home-lost-lostThings.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <h3>Lost Things</h3>
-<input type="text" placeholder="Search" id="search"/>
+<input type="text" placeholder="Search" id="search">
 <label class="form_padding_ls" ng-repeat="(typeKey, typeVal) in inputs">
     <ul>
         <li ng-repeat="value in typeVal">
