--- a/partial-home-lost-lostThings.html
+++ b/partial-home-lost-lostThings.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <h3>Lost Things</h3>
 <input type="text" placeholder="Search" id="search">
+<label>all<input type="radio" name="filter" ng-click="filter_map(-1)"/></label>
 <label class="form_padding_ls" ng-repeat="(typeKey, typeVal) in inputs">
     <ul>
         <li ng-repeat="value in typeVal">
