ubacio sam citanje pina ispod mape i chet na login ! Description ce ti citati tek od sada (stari markovi nece imati descrtiption) zato sto pri prosledjivanja u bazu na kraju description-data ubaci i zarez ( ',' ) zbog splic-a kada citas iz baze; ako oces poigraj se sa tim ali radi u sustini

--- a/partial-home-lost-lostSomething.html
+++ b/partial-home-lost-lostSomething.html
@@ -2,9 +2,9 @@
     <div >
         <h3><strong>You can report your findings in a form below</strong></h3>
 
-        <p  class="text-danger text-center" style="font-size:18px;">{{logIn_warning}}<a style="font-size:16px" ng-click="log_in_modal()">{{logIn_anchor}}</a></p>
-
-        <p  class="text-danger text-center" style="font-size:18px;">{{register_warning}}<a style="font-size:16px" ng-click="register_modal()">{{register_anchor}}</a></p>
+        <label  ng-show="!chatValue" class="text-danger text-center" style="font-size:18px;">You need to <a style="font-size:16px" ng-click="log_in_modal()">Log In</a></label>
+        </br>
+        <label ng-show="!chatValue" class="text-danger text-center" style="font-size:18px;">Dont have an account? <a style="font-size:16px" ng-click="register_modal()">Register</a></label>
 
 
     </div>
