--- a/partial-home-lost-lostThings.html
+++ b/partial-home-lost-lostThings.html
@@ -26,15 +26,27 @@
 
     </ui-gmap-google-map>
 </div>
-    <!--<div ng-controller="chat" style="width:auto; height:auto; border: 1px solid;">-->
-        <!--<div ng-repeat="message in messages">-->
-            <!--{{ message.user.name }}:-->
-            <!--{{ message.data }}-->
-        <!--</div>-->
-        <!--<form ng-submit="send()" style="margin:5px;">-->
-            <!--<input ng-model="textbox">-->
-            <!--<button type="submit">Send</button>-->
-        <!--</form>-->
-        <!--<button ng-click="clear()" style="margin:5px;">Clear</button>-->
-    <!--</div>-->
+<div style="border: 3px solid" class="row">
+
+<label><h4>Found by: </h4>{{finder}}</label>
+    </br>
+<label><h4>Item Name: </h4>{{itemName}}</label>
+    </br>
+<label><h4>Description: </h4>{{description}}</label>
+    </br>
+
+    <label ng-show="!chatValue" class="text-danger" style="font-size:18px;">You can live chat if you <a style="font-size:16px" ng-click="log_in_modal()">Log in</a></label>
+    <div >
+        <div ng-show="chatValue" ng-controller="chat" class="col-md-4 col-md-offset-4" style="border: 1px solid;">
+            <div ng-repeat="message in messages">
+                {{ message.user.name }}:
+                {{ message.data }}
+            </div>
+            <form ng-submit="send()" style="margin:5px;">
+                <input ng-model="textbox">
+                <button type="submit">Send</button>
+            </form>
+            <button ng-click="clear()" style="margin:5px;">Clear</button>
+        </div>
+    </div>
 </div>
