stavio na lostThings mouse over funkcije da bude lakse, na klik sada loaduje ispod ceo post, izbacio "all" iz kategorija nema potrebe realno i malo sredio raspored

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script src="angularjs-chat/angular-chat.js"></script>
 
 
-    <link rel="stylesheet" href="angular-bootstrap-simple-chat/src/css/style.css">
+    <!--<link rel="stylesheet" href="angular-bootstrap-simple-chat/src/css/style.css">-->
 
 
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.js"></script>
