--- a/partial-home-lost-lostThings.html
+++ b/partial-home-lost-lostThings.html
@@ -43,8 +43,8 @@
     <div style="margin:15px;">
         <div ng-if="chatValue" ng-controller="chat" class="col-md-4 col-md-offset-4" style="border: 1px solid; height:auto;">
             <div ng-repeat="message in messages">
-                {{ message.user.name }}:
-                {{ message.data }}
+                {{ message.user.name}}:
+                {{ message.data | poruka }}
             </div>
             <form ng-submit="send()" style="margin:5px;">
                 <input ng-model="textbox">
